# axiom

./: .dockerignore  .env.example  .gitignore  .mcp.json  ACB_FIRST_RUN.md  ACB_SPEC_v1.md  AGI_EVAL_COMPARISON.md  AXIOM_BENCHMARK_PROTOCOL.md  AXIOM_DATA_GOVERNANCE.md  AXIOM_DEMO.md  AXIOM_HONEST_BENCHMARK.md  AXIOM_SPEC.md  BENCHMARK_SUMMARY.txt  CALLGUARD.md  CHANGELOG.md  CHECKLIST.txt  CLAUDE.md  COPYRIGHT  DEPLOYER_GUIDE.md  Dockerfile  EU_AI_ACT_ALIGNMENT.md  LICENSE  README.md  SETUP.txt  TERMS_OF_SERVICE.md  _validate_gw.py  acb_calibrated_weights.json  acb_leaderboard.json  acb_runner.py  acb_scorer_test.py  axiom_acb_manifest.json  axiom_action_manifest.py  axiom_agency_guard.py  axiom_agent.py  axiom_agentic_compliance.py  axiom_agentic_compliance_manifest.json  axiom_agi_eval.py  axiom_agi_eval_results.json  axiom_amputate.py  axiom_anf_emulator.py  (+234 more)
.github/: dependabot.yml
.project/: postBuildSteps.bash  spec.yaml
.snapshots/: worker_best.axiom  worker_best.meta.json
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
audio_dataset/: README.md
aui/: __init__.py  app.py  autonomous.py  companion.py  curiosity.py  demo.py  demo2.py  demo3.py  embeddings.py  knowledge.py  master_token.py  panels.py  persona.py  plan.py  planner_claude.py  planner_local.py  qrf.py  redact.py  render.py  server.py  settings.py  srd_setup.py  websearch.py
autotrain_data/: train.csv  train.jsonl  train_qwen_chatml.jsonl  train_qwen_chatml_tagged.jsonl
axiom/: client.py  composition_graph.py  conversation_monitor.py  evolution.py  init.py  meta_evolution.py  rubric.py  session.py
axiom_5cat_benchmark/: __init__.py  __main__.py  cli.py  reproducibility.py  runner.py  schema.py  signing.py
axiom_agent_fabric/: __init__.py  capsule.py  coordinator.py  power_conditioner.py  result.py  router.py
axiom_audio/: __init__.py  ambient.py  automotive.py  features.py  report.py  tempo.py  vad.py  voice.py
axiom_autonomous/: __init__.py  executor.py  governance.py  honesty_patterns.py  ledger.py  models.py  orchestrator.py  parser.py  planner.py  sandbox.py  verifier.py
axiom_bench/: __init__.py  cli.py  report.py
axiom_constitutional/: __init__.py  agent_factory.py  axiom_destructive_guard.py  axiom_pii_guard.py  axiom_redact.py  cli.py  client.py  composition_graph.py  conversation_monitor.py  dos_watcher.py  efficiency.py  evolution.py  experience_store.py  history_store.py  init.py  integrity_check.py  knowledge_rag.py  meta_evolution.py  prompt_memory.py  rubric.py  session.py  shared_memory.py  teacher.py
axiom_demo_governed_agent/: .env.example  README.md  demo_server.py  demo_ui.html  requirements.txt
axiom_event_token/: __init__.py  agents.py  backends.py  bonded_pair.py  bonded_qrf_prefix.py  chain.py  coordinator.py  delegate_runtime.py  kv_cache.py  models.py  router.py
axiom_files/: bestfriend.axiom  callguard.axiom  composition_graph.axiom  concepts.axiom  conversation_monitor.axiom  doctor.axiom  dos_watcher.axiom  electionguard.axiom  evaluator.axiom  friend.axiom  game_watcher.axiom  operator.axiom  parser.py  research_critic.axiom  research_hypothesis.axiom  research_report.axiom  reward_analysis.axiom  rewriter.axiom  sandbox.axiom  sandbox_content.axiom  sandbox_worker.axiom  scout.axiom  session.axiom  shared_memory.axiom  teacher.axiom  validator.py  verifier.axiom  worker.axiom
axiom_firewall/: __init__.py  auth.py  billing.py  cmr_agent.py  compliance_checker.py  dashboard.py  data_policy.py  db.py  erv_router.py  flight_recorder.py  limits.py  models.py  pgvector_connector.py  policy.py  registry_client.py  skill_pack.py  studio.py
axiom_fleet/: __init__.py  fleet_manifest.py  fleet_router.py
axiom_lang.egg-info/: PKG-INFO  (+4 more)
firewall_sdk/python/: .gitignore  README.md  pyproject.toml
firewall_sdk/python/src/axiom_firewall/: __init__.py  client.py  errors.py  models.py
firewall_sdk/python/tests/: test_client.py
releases/axiom-lang-1.8.0/: CHANGELOG.md  DEPLOYER_GUIDE.md  LICENSE  MANIFEST.json  MANIFEST.md  README.md  cli.py  pyproject.toml
releases/axiom-lang-1.8.0/axiom/: agent_factory.py  client.py  evolution.py  integrity_check.py  teacher.py
releases/axiom-lang-1.8.0/axiom/agents/: sandbox_content.py  worker.py
releases/axiom-lang-1.8.0/axiom_files/: agent_factory.axiom  concepts.axiom  session.axiom  skill_builder.axiom  worker.axiom
releases/axiom-lang-1.8.0/certs/: evaluator_cert_20260418_061606.json  evaluator_cert_20260418_221637.json  evaluator_cert_20260418_225640.json  evaluator_cert_20260419_092010.json  evaluator_fria_20260418_221401.json  evaluator_fria_20260418_221637.json  evaluator_fria_20260419_042058.json  evaluator_fria_20260419_092010.json  financialcomplianceagent_cert_20260418_033849.json  financialcomplianceagent_fria_20260418_222101.json  governmentcomplianceagent_cert_20260418_204952.json  governmentcomplianceagent_cert_20260418_211739.json  governmentcomplianceagent_cert_20260418_222101.json  governmentcomplianceagent_cert_20260418_224943.json  governmentcomplianceagent_fria_20260418_224943.json  governmentcomplianceagent_fria_20260419_092011.json  healthcarecomplianceagent_cert_20260418_034128.json  healthcarecomplianceagent_cert_20260418_222101.json  healthcarecomplianceagent_cert_20260418_224849.json  healthcarecomplianceagent_cert_20260419_042058.json  healthcarecomplianceagent_cert_20260419_092011.json  healthcarecomplianceagent_fria_20260418_224849.json  rewriter_cert_20260418_061614.json  rewriter_cert_20260418_221644.json  rewriter_cert_20260418_222101.json  rewriter_cert_20260418_224848.json  rewriter_cert_20260418_224943.json  rewriter_cert_20260418_225640.json  rewriter_cert_20260419_042058.json  rewriter_fria_20260418_221644.json  rewriter_fria_20260418_222101.json  rewriter_fria_20260419_092011.json  sandbox_cert_20260418_212419.json  sandbox_cert_20260418_224848.json  sandbox_cert_20260418_224943.json  sandbox_cert_20260419_092011.json  sandbox_fria_20260418_225640.json  worker_cert_20260418_033830.json  worker_cert_20260418_171437.json  worker_cert_20260418_171800.json  (+7 more)
(+1205 files in other folders)
