[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-constitutional"
version = "1.8.5"
description = "A declarative language for constitutional AI agents — with domain governance packages for government, finance, and healthcare"
readme = "README.md"
license = "MIT"
authors = [{ name = "Antonio Roberts" }]
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "dsl", "governance", "compliance", "constitutional-ai", "prompt-engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
axiom          = "axiom_constitutional.cli:main"
axiom-validate = "axiom_constitutional.cli:validate_cmd"
axiom-certify  = "axiom_constitutional.cli:certify_cmd"
axiom-run      = "axiom_constitutional.cli:run_cmd"
axiom-server   = "axiom_constitutional.cli:cmd_server"
axiom-init     = "axiom_constitutional.init:main"
axiom-add      = "axiom_constitutional.init:add_main"

[project.urls]
Repository = "https://github.com/Orivael-Dev/axiom"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom_constitutional*", "axiom_files*"]

[tool.setuptools.package-data]
"axiom_files" = ["*.axiom", "domains/*.axiom"]
