[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-constitutional"
version = "1.8.7"
description = "Constitutional AI governance framework"
authors = [{ name = "Antonio Roberts", email = "hello@orivael.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai", "agents", "llm", "dsl", "governance", "compliance", "constitutional-ai", "prompt-engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies — always installed
dependencies = [
    "python-dotenv>=1.0.0",
]

# Optional installs
[project.optional-dependencies]

llm = [
    "anthropic>=1.0.0",
]

guard = [
    "anthropic>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

research = [
    "anthropic>=1.0.0",
]

games = [
    "chess>=1.9.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "mss>=7.0.0",
    "Pillow>=9.0.0",
    "pyautogui>=0.9.54",
]

all = [
    "anthropic>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "chess>=1.9.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
axiom          = "axiom_constitutional.cli:main"
axiom-validate = "axiom_constitutional.cli:validate_cmd"
axiom-certify  = "axiom_constitutional.cli:certify_cmd"

[project.urls]
Homepage   = "https://orivael.dev"
Repository = "https://github.com/Orivael-Dev/axiom"
PyPI       = "https://pypi.org/project/axiom-constitutional/"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom_constitutional*", "axiom_constitutional.guards*", "axiom_files*"]

[tool.setuptools.package-data]
"axiom_files" = ["*.axiom", "core/*.axiom", "domains/*.axiom", "research/*.axiom"]
