[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-constitutional"
version = "1.8.8"
description = "Constitutional AI governance framework"
authors = [{ name = "Antonio Roberts", email = "hello@orivael.dev" }]
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai", "agents", "llm", "dsl", "governance", "compliance", "constitutional-ai", "prompt-engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies — always installed
dependencies = [
    "python-dotenv>=1.0.0",
    # axiom_constitutional.client imports `openai` lazily inside
    # _build_client(), so pure-Python guards (validate_output etc.)
    # don't actually need it. Pulling it in by default means a fresh
    # `pipx install axiom-constitutional` ships a usable MCP server
    # end-to-end — Claude Desktop / Cursor / Continue can call every
    # tool without the user doing a follow-up `pipx inject openai`.
    "openai>=1.0.0",
]

# Optional installs
[project.optional-dependencies]

llm = [
    "anthropic>=1.0.0",
]

# OS Shield daemon (ORVL-013) — needs psutil for real process actions.
# The daemon imports psutil lazily and degrades to a no-op when missing.
shield = [
    "psutil>=5.9.0",
]

guard = [
    "anthropic>=1.0.0",
    # >=0.106 required for the request-first Jinja2Templates.TemplateResponse
    # signature used in axiom_firewall/dashboard.py (mcp_index, etc.).
    # Older starlette bundled with fastapi<0.106 interprets the first arg
    # as `name`, raising TypeError → opaque 500 on /dashboard/mcp.
    "fastapi>=0.106.0",
    "uvicorn>=0.23.0",
]

research = [
    "anthropic>=1.0.0",
]

games = [
    "chess>=1.9.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "mss>=7.0.0",
    "Pillow>=9.0.0",
    "pyautogui>=0.9.54",
]

all = [
    "anthropic>=1.0.0",
    # >=0.106 required for the request-first Jinja2Templates.TemplateResponse
    # signature used in axiom_firewall/dashboard.py (mcp_index, etc.).
    # Older starlette bundled with fastapi<0.106 interprets the first arg
    # as `name`, raising TypeError → opaque 500 on /dashboard/mcp.
    "fastapi>=0.106.0",
    "uvicorn>=0.23.0",
    "chess>=1.9.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
axiom            = "axiom_constitutional.cli:main"
axiom-validate   = "axiom_constitutional.cli:validate_cmd"
axiom-certify    = "axiom_constitutional.cli:certify_cmd"
axiom-mcp        = "axiom_mcp_server:main"
axiom-autonomous = "axiom_autonomous_agent:main"

[project.urls]
Homepage   = "https://orivael.dev"
Repository = "https://github.com/Orivael-Dev/axiom"
PyPI       = "https://pypi.org/project/axiom-constitutional/"

[tool.setuptools]
# Top-level modules to ship in the wheel. axiom_mcp_server is exposed
# as the `axiom-mcp` console script; axiom_signing is its only hard
# dependency on the axiom codebase (other tool dependencies are
# lazy-imported and degrade gracefully when absent).
py-modules = ["axiom_mcp_server", "axiom_signing"]

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom_constitutional*", "axiom_constitutional.guards*", "axiom_files*"]

[tool.setuptools.package-data]
"axiom_files" = ["*.axiom", "core/*.axiom", "domains/*.axiom", "research/*.axiom"]

# Repo-root pytest only collects server-side tests. The Firewall SDK
# (firewall_sdk/) and the OSS Guard SDK (sdk/) each have their own
# `pytest` invocation because both publish an `axiom_firewall` /
# `axiom-guard` Python module that would clash with the server
# package names in a shared sys.modules.
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "firewall_sdk",
    "sdk",
    "node_modules",
    ".git",
    "build",
    "dist",
]
