[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-firewall"
version = "0.1.0"
description = "Official Python client for Axiom Intent Firewall — constitutional safety verdicts for LLM calls"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Orivael Dev", email = "support@orivael.dev" }
]
keywords = [
    "ai", "llm", "safety", "firewall", "constitutional-ai",
    "guard", "moderation", "axiom", "orivael",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "urllib3>=1.26",
]

[project.urls]
Homepage = "https://firewall.orivael.dev"
Documentation = "https://docs.orivael.dev/firewall"
Source = "https://github.com/Orivael-Dev/axiom"
Issues = "https://github.com/Orivael-Dev/axiom/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
